# titan-grove

./: .env.business.example  .env.example  .env.production.example  .eslintrc.js  .gitignore  100_BUSINESS_LOGIC_IMPROVEMENT_OPPORTUNITIES.md  ARCHITECTURAL_ANALYSIS_REPORT.md  ARCHITECTURE_BEST_PRACTICES_AUDIT.md  BUSINESS_IMPACT_ANALYSIS.md  CENTRALIZATION_IMPROVEMENTS_SUMMARY.md  CLAUDE.md  CODE_ANALYSIS_DETAILS.md  CODE_IMPROVEMENT_OPPORTUNITIES.md  CODE_REVIEW_COMPLETION_REPORT.md  CODE_REVIEW_DUPLICATION_FIX_REPORT.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_NAMING_FIX_REPORT.md  CODE_REVIEW_PR163_FOLLOWUP_SUMMARY.md  COMMAND_CENTER_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_100_POINT_ANALYSIS_REPORT.md  COMPREHENSIVE_40_MODULES_COMPLETE.md  CONTRIBUTING.md  CONTROLLER_ROUTE_STANDARDIZATION_SUMMARY.md  CRM_IMPLEMENTATION_SUMMARY.md  CYPRESS_TESTING_COMPLETE_SUMMARY.md  Cargo.toml  DATABASE_SETUP.md  DETAILED_CONTROLLER_ROUTE_ANALYSIS.md  Dockerfile  ENTERPRISE_IMPROVEMENTS.md  EXECUTIVE_SUMMARY_30_IMPROVEMENTS.md  FINAL_ARCHITECTURE_COMPLIANCE_REPORT.md  GEOSPATIAL_PAGES_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  MIGRATION_COMPLETION_SUMMARY.md  MISSION_ACCOMPLISHED.md  NAMING_CONSISTENCY_GUIDE.md  NAPI_RS_47_MODULES_COMPLETE.md  NAPI_RS_DOCUMENTATION_COMPLETE.md  (+77 more)
.claude/: settings.json
backend/services/order-service/: Cargo.toml  Dockerfile
backend/services/order-service/src/: lib.rs  main.rs
cypress/: README.md
data/: titan_grove.db
docs/: 48-FEATURES-IMPLEMENTATION-COMPLETE.md  ARCHITECTURE_DIAGRAM.md  BUSINESS_CONFIGURATION_SYSTEM.md  (+18 more)
(+3336 files in other folders)
