[package]
name = "titan-grove-native"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.13.0", default-features = false, features = ["napi8"] }
napi-derive = "2.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true