[package]
name = "order-service"
version = "0.1.0"
edition = "2021"
authors = ["Titan Grove Team"]
description = "Order Management Service - Handles orders, cart management, and order processing"

[[bin]]
name = "order-service"
path = "src/main.rs"

[lib]
name = "order_service"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
